// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ontario-step-indicator > renders > the default output 1`] = `
<ontario-step-indicator class="hydrated">
  <mock:shadow-root>
    <div class="ontario-step-indicator">
      <div class="ontario-row">
        <div class="ontario-columns ontario-small-12">
          <div class="ontario-step-indicator--with-back-button--false">
            <span class="ontario-h4">
              Step ? of ?
            </span>
          </div>
          <hr>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ontario-step-indicator>
`;

exports[`ontario-step-indicator > renders > the percentage output shape with a back link 1`] = `
<ontario-step-indicator show-back-button="true" back-button-url="https://designsystem.ontario.ca/" percentage-complete="70" class="hydrated">
  <mock:shadow-root>
    <div class="ontario-step-indicator">
      <div class="ontario-row">
        <div class="ontario-columns ontario-small-12">
          <div class="ontario-step-indicator--with-back-button--true">
            <a class="ontario-button ontario-button--tertiary" href="https://designsystem.ontario.ca/">
              <ontario-icon-chevron-left aria-hidden="true" class="hydrated">
                <mock:shadow-root>
                  <div class="ontario-icon ontario-icon--blue ontario-icon--width-24">
                    <svg class="svg-icon" role="img" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" id="chevron-left">
                      <path d="M15.4 7.4L14 6l-6 6 6 6 1.4-1.4-4.58-4.6 4.58-4.6z"></path>
                    </svg>
                  </div>
                </mock:shadow-root>
              </ontario-icon-chevron-left>
              Back
            </a>
            <span class="ontario-h4">
              70% complete
            </span>
          </div>
          <hr>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ontario-step-indicator>
`;

exports[`ontario-step-indicator > renders > the step output shape 1`] = `
<ontario-step-indicator current-step="2" number-of-steps="5" class="hydrated">
  <mock:shadow-root>
    <div class="ontario-step-indicator">
      <div class="ontario-row">
        <div class="ontario-columns ontario-small-12">
          <div class="ontario-step-indicator--with-back-button--false">
            <span class="ontario-h4">
              Step 2 of 5
            </span>
          </div>
          <hr>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</ontario-step-indicator>
`;
